random sample imputer

--- a/feature_engine_imputations.ipynb
+++ b/feature_engine_imputations.ipynb
@@ -1856,7 +1856,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### Feature Engine - Missing Category Imputation\n"
    ]
@@ -1868,7 +1870,8 @@
     "ExecuteTime": {
      "end_time": "2020-06-27T15:38:49.877940Z",
      "start_time": "2020-06-27T15:38:49.859397Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -1917,7 +1920,8 @@
     "ExecuteTime": {
      "end_time": "2020-06-27T15:51:30.285133Z",
      "start_time": "2020-06-27T15:51:30.272044Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -1954,7 +1958,8 @@
     "ExecuteTime": {
      "end_time": "2020-06-27T15:51:43.546839Z",
      "start_time": "2020-06-27T15:51:43.543176Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -1979,7 +1984,8 @@
     "ExecuteTime": {
      "end_time": "2020-06-27T15:52:07.195069Z",
      "start_time": "2020-06-27T15:52:07.183169Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -2076,29 +2082,349 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 60,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-27T15:53:42.246445Z",
-     "start_time": "2020-06-27T15:53:42.241841Z"
+     "end_time": "2020-06-27T15:54:03.909263Z",
+     "start_time": "2020-06-27T15:54:03.903575Z"
+    },
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BsmtQual       0.000000\n",
+       "FireplaceQu    0.000000\n",
+       "LotFrontage    0.184932\n",
+       "MasVnrArea     0.004892\n",
+       "GarageYrBlt    0.052838\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tmp.isnull().mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Feature Engine - Random Sample Imputation\n",
+    "\n",
+    "\n",
+    "----------------\n",
+    "- https://feature-engine.readthedocs.io/en/latest/imputers/RandomSampleImputer.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-27T16:11:36.060969Z",
+     "start_time": "2020-06-27T16:11:36.042501Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1022, 5) (438, 5)\n",
+      "BsmtQual        object\n",
+      "FireplaceQu     object\n",
+      "LotFrontage    float64\n",
+      "MasVnrArea     float64\n",
+      "GarageYrBlt    float64\n",
+      "dtype: object\n",
+      "BsmtQual       0.023483\n",
+      "FireplaceQu    0.467710\n",
+      "LotFrontage    0.184932\n",
+      "MasVnrArea     0.004892\n",
+      "GarageYrBlt    0.052838\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# let's load the dataset with a selected group of variables\n",
+    "\n",
+    "cols_to_use = [\n",
+    "    'BsmtQual', 'FireplaceQu', 'LotFrontage', 'MasVnrArea', 'GarageYrBlt',\n",
+    "    'SalePrice'\n",
+    "]\n",
+    "\n",
+    "data = pd.read_csv('data/housing.csv', usecols=cols_to_use)\n",
+    "\n",
+    "# let's separate into training and testing set\n",
+    "# first drop the target from the feature list\n",
+    "cols_to_use.remove('SalePrice')\n",
+    "# split\n",
+    "x_train, x_test, y_train, y_test = train_test_split(\n",
+    "    data[cols_to_use],\n",
+    "    data['SalePrice'],\n",
+    "    test_size=0.3,\n",
+    "    random_state=0\n",
+    ")\n",
+    "print(x_train.shape, x_test.shape)\n",
+    "print(x_train.dtypes)\n",
+    "print(x_train.isnull().mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-27T16:11:36.357629Z",
+     "start_time": "2020-06-27T16:11:36.351411Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[CategoricalVariableImputer(imputation_method='frequent', variables=['BsmtQual']),\n",
-       " CategoricalVariableImputer(variables=['FireplaceQu'])]"
+       "RandomSampleImputer(random_state=['LotFrontage', 'MasVnrArea'],\n",
+       "                    seed='observation',\n",
+       "                    variables=['BsmtQual', 'FireplaceQu', 'LotFrontage',\n",
+       "                               'MasVnrArea', 'GarageYrBlt'])"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[pipeline.named_steps[v] for v in pipeline.named_steps]"
+    "## Feature engine captures all variables by default\n",
+    "imputer = mdi.RandomSampleImputer(\n",
+    "    random_state=[\"LotFrontage\", \"MasVnrArea\"],\n",
+    "    seed=\"observation\",\n",
+    "    seeding_method=\"add\"\n",
+    ")\n",
+    "imputer.fit(x_train)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-27T16:11:36.777566Z",
+     "start_time": "2020-06-27T16:11:36.767666Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>BsmtQual</th>\n",
+       "      <th>FireplaceQu</th>\n",
+       "      <th>LotFrontage</th>\n",
+       "      <th>MasVnrArea</th>\n",
+       "      <th>GarageYrBlt</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>64</th>\n",
+       "      <td>Gd</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>573.0</td>\n",
+       "      <td>1998.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>682</th>\n",
+       "      <td>Gd</td>\n",
+       "      <td>Gd</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1996.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>960</th>\n",
+       "      <td>TA</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1384</th>\n",
+       "      <td>TA</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1939.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1100</th>\n",
+       "      <td>TA</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1930.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     BsmtQual FireplaceQu  LotFrontage  MasVnrArea  GarageYrBlt\n",
+       "64         Gd         NaN          NaN       573.0       1998.0\n",
+       "682        Gd          Gd          NaN         0.0       1996.0\n",
+       "960        TA         NaN         50.0         0.0          NaN\n",
+       "1384       TA         NaN         60.0         0.0       1939.0\n",
+       "1100       TA         NaN         60.0         0.0       1930.0"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# the imputer stores a copy of the selected variables from\n",
+    "# the train set, from which to extract the random sample\n",
+    "\n",
+    "imputer.X_.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-27T16:11:38.509762Z",
+     "start_time": "2020-06-27T16:11:37.224581Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>BsmtQual</th>\n",
+       "      <th>FireplaceQu</th>\n",
+       "      <th>LotFrontage</th>\n",
+       "      <th>MasVnrArea</th>\n",
+       "      <th>GarageYrBlt</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>64</th>\n",
+       "      <td>Gd</td>\n",
+       "      <td>TA</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>573.0</td>\n",
+       "      <td>1998.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>682</th>\n",
+       "      <td>Gd</td>\n",
+       "      <td>Gd</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1996.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>960</th>\n",
+       "      <td>TA</td>\n",
+       "      <td>TA</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2001.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1384</th>\n",
+       "      <td>TA</td>\n",
+       "      <td>TA</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1939.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1100</th>\n",
+       "      <td>TA</td>\n",
+       "      <td>TA</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1930.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     BsmtQual FireplaceQu  LotFrontage  MasVnrArea  GarageYrBlt\n",
+       "64         Gd          TA         37.0       573.0       1998.0\n",
+       "682        Gd          Gd         60.0         0.0       1996.0\n",
+       "960        TA          TA         50.0         0.0       2001.0\n",
+       "1384       TA          TA         60.0         0.0       1939.0\n",
+       "1100       TA          TA         60.0         0.0       1930.0"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# feature-engine returns a dataframe\n",
+    "\n",
+    "tmp = imputer.transform(x_train)\n",
+    "tmp.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
