--- a/feature_engine_imputations.ipynb
+++ b/feature_engine_imputations.ipynb
@@ -2113,7 +2113,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### Feature Engine - Random Sample Imputation\n",
     "\n",
@@ -2129,7 +2131,8 @@
     "ExecuteTime": {
      "end_time": "2020-06-27T16:11:36.060969Z",
      "start_time": "2020-06-27T16:11:36.042501Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -2178,13 +2181,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "---------------------\n",
+    "A seed can be set to a pre-defined number and all observations will be replaced in batch. Alternatively, a seed can be set using the values of 1 or more numerical variables. In this case, the observations will be imputed individually, one at a time, using the values of the variables as a seed."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 76,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-27T16:11:36.357629Z",
      "start_time": "2020-06-27T16:11:36.351411Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -2218,7 +2232,8 @@
     "ExecuteTime": {
      "end_time": "2020-06-27T16:11:36.777566Z",
      "start_time": "2020-06-27T16:11:36.767666Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -2322,7 +2337,8 @@
     "ExecuteTime": {
      "end_time": "2020-06-27T16:11:38.509762Z",
      "start_time": "2020-06-27T16:11:37.224581Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -2420,11 +2436,311 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### Feature Engine - Missing Indicator\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-27T16:14:53.382985Z",
+     "start_time": "2020-06-27T16:14:53.363267Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1022, 5) (438, 5)\n",
+      "BsmtQual        object\n",
+      "FireplaceQu     object\n",
+      "LotFrontage    float64\n",
+      "MasVnrArea     float64\n",
+      "GarageYrBlt    float64\n",
+      "dtype: object\n",
+      "BsmtQual       0.023483\n",
+      "FireplaceQu    0.467710\n",
+      "LotFrontage    0.184932\n",
+      "MasVnrArea     0.004892\n",
+      "GarageYrBlt    0.052838\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# let's load the dataset with a selected group of variables\n",
+    "\n",
+    "cols_to_use = [\n",
+    "    'BsmtQual', 'FireplaceQu', 'LotFrontage', 'MasVnrArea', 'GarageYrBlt',\n",
+    "    'SalePrice'\n",
+    "]\n",
+    "\n",
+    "data = pd.read_csv('data/housing.csv', usecols=cols_to_use)\n",
+    "\n",
+    "# let's separate into training and testing set\n",
+    "# first drop the target from the feature list\n",
+    "cols_to_use.remove('SalePrice')\n",
+    "# split\n",
+    "x_train, x_test, y_train, y_test = train_test_split(\n",
+    "    data[cols_to_use],\n",
+    "    data['SalePrice'],\n",
+    "    test_size=0.3,\n",
+    "    random_state=0\n",
+    ")\n",
+    "print(x_train.shape, x_test.shape)\n",
+    "print(x_train.dtypes)\n",
+    "print(x_train.isnull().mean())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "-----------------------\n",
+    "Let's try to use the missing indicator along with the other imputations \n",
+    "\n",
+    "- Add Missing Indicator to all variables\n",
+    "- Median Imputation to numerical variables\n",
+    "- Missing category imputation to categorical variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-27T21:17:40.589123Z",
+     "start_time": "2020-06-27T21:17:40.559363Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(steps=[('missing_indicator', AddMissingIndicator()),\n",
+       "                ('imputer_numerical',\n",
+       "                 MeanMedianImputer(variables=['LotFrontage', 'MasVnrArea',\n",
+       "                                              'GarageYrBlt'])),\n",
+       "                ('imputer_categorical',\n",
+       "                 CategoricalVariableImputer(imputation_method='frequent',\n",
+       "                                            variables=['FireplaceQu',\n",
+       "                                                       'BsmtQual']))])"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pipeline = Pipeline(\n",
+    "    steps=[\n",
+    "        # this adds missing indicator to all nan's\n",
+    "        (\"missing_indicator\", mdi.AddMissingIndicator()),\n",
+    "        # median imputation to all numerical variables\n",
+    "        (\"imputer_numerical\", mdi.MeanMedianImputer(imputation_method=\"median\", \n",
+    "                                                    variables=['LotFrontage', 'MasVnrArea', 'GarageYrBlt'])),\n",
+    "        # now most frequent imputation for categorical\n",
+    "        (\"imputer_categorical\", mdi.CategoricalVariableImputer(imputation_method=\"frequent\", \n",
+    "                                                               variables=['FireplaceQu', 'BsmtQual'])),\n",
+    "    ]\n",
+    ")\n",
+    "pipeline.fit(x_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-27T21:22:16.770178Z",
+     "start_time": "2020-06-27T21:22:16.767671Z"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "pipeline.named_steps[\"missing_indicator\"].variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-27T21:22:53.196577Z",
+     "start_time": "2020-06-27T21:22:53.183778Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BsmtQual          0.0\n",
+       "FireplaceQu       0.0\n",
+       "LotFrontage       0.0\n",
+       "MasVnrArea        0.0\n",
+       "GarageYrBlt       0.0\n",
+       "BsmtQual_na       0.0\n",
+       "FireplaceQu_na    0.0\n",
+       "LotFrontage_na    0.0\n",
+       "MasVnrArea_na     0.0\n",
+       "GarageYrBlt_na    0.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tmp = pipeline.transform(x_train)\n",
+    "tmp.isnull().mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-27T21:23:04.556042Z",
+     "start_time": "2020-06-27T21:23:04.543939Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>BsmtQual</th>\n",
+       "      <th>FireplaceQu</th>\n",
+       "      <th>LotFrontage</th>\n",
+       "      <th>MasVnrArea</th>\n",
+       "      <th>GarageYrBlt</th>\n",
+       "      <th>BsmtQual_na</th>\n",
+       "      <th>FireplaceQu_na</th>\n",
+       "      <th>LotFrontage_na</th>\n",
+       "      <th>MasVnrArea_na</th>\n",
+       "      <th>GarageYrBlt_na</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>64</th>\n",
+       "      <td>Gd</td>\n",
+       "      <td>Gd</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>573.0</td>\n",
+       "      <td>1998.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>682</th>\n",
+       "      <td>Gd</td>\n",
+       "      <td>Gd</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1996.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>960</th>\n",
+       "      <td>TA</td>\n",
+       "      <td>Gd</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1979.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1384</th>\n",
+       "      <td>TA</td>\n",
+       "      <td>Gd</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1939.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1100</th>\n",
+       "      <td>TA</td>\n",
+       "      <td>Gd</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1930.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     BsmtQual FireplaceQu  LotFrontage  MasVnrArea  GarageYrBlt  BsmtQual_na  \\\n",
+       "64         Gd          Gd         69.0       573.0       1998.0            0   \n",
+       "682        Gd          Gd         69.0         0.0       1996.0            0   \n",
+       "960        TA          Gd         50.0         0.0       1979.0            0   \n",
+       "1384       TA          Gd         60.0         0.0       1939.0            0   \n",
+       "1100       TA          Gd         60.0         0.0       1930.0            0   \n",
+       "\n",
+       "      FireplaceQu_na  LotFrontage_na  MasVnrArea_na  GarageYrBlt_na  \n",
+       "64                 1               1              0               0  \n",
+       "682                0               1              0               0  \n",
+       "960                1               0              0               1  \n",
+       "1384               1               0              0               0  \n",
+       "1100               1               0              0               0  "
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tmp.head()"
+   ]
   },
   {
    "cell_type": "code",
