one hot encoding

--- a/categorical_variable_encoding.ipynb
+++ b/categorical_variable_encoding.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-28T14:01:05.033846Z",
-     "start_time": "2020-06-28T14:01:02.866222Z"
+     "end_time": "2020-06-28T14:08:30.336763Z",
+     "start_time": "2020-06-28T14:08:30.324279Z"
     }
    },
    "outputs": [],
@@ -22,14 +22,24 @@
     "\n",
     "# to split the datasets\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.pipeline import Pipeline"
+    "from sklearn.pipeline import Pipeline\n",
+    "\n",
+    "# for one hot encoding with sklearn\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "\n",
+    "# for one hot encoding with feature-engine\n",
+    "from feature_engine.categorical_encoders import OneHotCategoricalEncoder"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### OneHot Encoding"
+    "### OneHot Encoding\n",
+    "\n",
+    "- pandas\n",
+    "- sklearn\n",
+    "- feature engine"
    ]
   },
   {
